fixed lock icon and load time alignments

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -337,7 +337,7 @@
 // Styles had to be reworked to properly position the new caption buttons for Windows
 .navbarCaptionButtonContainer {
   display: flex;
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid #aaaaaa;
 
   &.allowDragging {
     -webkit-app-region: drag;
@@ -686,7 +686,7 @@
     font-size: 12px;
     right: 10px;
     text-align: right;
-    margin: 4px 0 0 0;
+    margin: 2px 0 0 0;
     top: 9px;
     cursor: default;
     padding-top: 1px;
@@ -767,7 +767,7 @@
 
     &.fa-lock,
     &.fa-unlock {
-      margin-top: 4px;
+      margin-top: 1px;
       font-size: 16px;
       min-height: 10px;
       min-width: 16px;
